--- a/examples/mvc5/AspNetExample/Views/Shared/_Layout.cshtml
+++ b/examples/mvc5/AspNetExample/Views/Shared/_Layout.cshtml
@@ -29,13 +29,25 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    @if (ViewBag.NoContainer != null)
+    {
         @RenderBody()
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
-    </div>
+    }
+    else
+    {
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            </footer>
+        </div>
+    }
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
