--- a/examples/mvc5/AspNetExample/Views/MarkdownWeb/Index.cshtml
+++ b/examples/mvc5/AspNetExample/Views/MarkdownWeb/Index.cshtml
@@ -3,12 +3,26 @@
     ViewBag.Title = Model.Title;
 }
 
-<div class="doc-pages">
+<div class="markdown-web">
     @Html.Raw(Model.Body)
 </div>
+
 <div class="toc-container">
     <h1>TOC!</h1>
     @Html.Raw(Model.GetPartOrDefault("TableOfContents").Body)
 </div>
 <hr />
+
 <a href="?editor=true">Edit page</a>
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $('pre code').each(function (i, block) {
+                console.log(hljs, block)
+                hljs.highlightBlock(block);
+            });
+        });
+    </script>
+}
