--- a/examples/mvc5/GitAspNetMvc/Views/Home/Index.cshtml
+++ b/examples/mvc5/GitAspNetMvc/Views/Home/Index.cshtml
@@ -1,20 +1,18 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "MarkdownWeb";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>MarkdownWeb</h1>
+    <p class="lead">MarkdownWeb allows you to build a wiki using markdown files (which can exist in a git repository).</p>
+    <p><a href="http://github.com/jgauffin/markdownweb" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            The generator comes as a nuget package. Simply download it and run the generator service.
         </p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
