Changed how git pulls packages (ignoring whitespaces and merge using "Theirs")

--- a/examples/mvc5/AspNetExample/Content/Site.css
+++ b/examples/mvc5/AspNetExample/Content/Site.css
@@ -3,23 +3,29 @@
     padding-bottom: 20px;
 }
 
-/* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
+.markdown-web {
+    margin-top: 30px;
+    padding-right: 150px;
+}
+
+    .markdown-web img {
+        max-width: 100%;
+        border: 1px solid #000;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+
 .dl-horizontal dt {
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
     max-width: 280px;
 }
-
